--- a/Behaviors/Shadow caster/MouseMov.vcproj
+++ b/Behaviors/Shadow caster/MouseMov.vcproj
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9.00"
-	Name="ConstructSDK"
-	ProjectGUID="{FB4F89F3-EDC9-40C6-9740-32949B440FE0}"
+	Version="8.00"
+	Name="MouseMov"
+	ProjectGUID="{C66CBA5C-950F-4113-B883-DE4E38054ED4}"
+	RootNamespace="ConstructSDK"
 	Keyword="MFCProj"
-	TargetFrameworkVersion="0"
 	>
 	<Platforms>
 		<Platform
@@ -17,11 +17,11 @@
 	<Configurations>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory=".\..\..\..\Construct Compile\Sprite Object\Release"
-			IntermediateDirectory=".\..\..\..\Construct Compile\Sprite Object\Release"
+			OutputDirectory=".\..\..\..\Construct Compile\8DirMov\Release"
+			IntermediateDirectory=".\..\..\..\Construct Compile\8DirMov\Release"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
-			UseOfMFC="1"
+			UseOfMFC="2"
 			ATLMinimizesCRunTimeLibraryUsage="false"
 			CharacterSet="2"
 			>
@@ -43,7 +43,7 @@
 				MkTypLibCompatible="true"
 				SuppressStartupBanner="true"
 				TargetEnvironment="1"
-				TypeLibraryName=".\..\..\..\Construct Compile\Sprite Object\Release/ConstructSDK.tlb"
+				TypeLibraryName=".\..\..\..\Construct Compile\8DirMov\Release/ConstructSDK.tlb"
 				HeaderFileName=""
 			/>
 			<Tool
@@ -52,14 +52,14 @@
 				InlineFunctionExpansion="1"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL"
 				StringPooling="true"
-				RuntimeLibrary="0"
+				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="2"
 				PrecompiledHeaderThrough="stdafx.h"
-				PrecompiledHeaderFile=".\..\..\..\Construct Compile\Sprite Object\Release/ConstructSDK.pch"
-				AssemblerListingLocation=".\..\..\..\Construct Compile\Sprite Object\Release/"
-				ObjectFile=".\..\..\..\Construct Compile\Sprite Object\Release/"
-				ProgramDataBaseFileName=".\..\..\..\Construct Compile\Sprite Object\Release/"
+				PrecompiledHeaderFile=".\..\..\..\Construct Compile\8DirMov\Release/ConstructSDK.pch"
+				AssemblerListingLocation=".\..\..\..\Construct Compile\8DirMov\Release/"
+				ObjectFile=".\..\..\..\Construct Compile\8DirMov\Release/"
+				ProgramDataBaseFileName=".\..\..\..\Construct Compile\8DirMov\Release/"
 				BrowseInformation="1"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
@@ -77,15 +77,13 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="..\..\IDE\Plugins\Light.csx"
+				OutputFile="..\..\IDE\Plugins\ShadowCaster.csx"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				ModuleDefinitionFile=".\ConstructSDK.def"
-				ProgramDatabaseFile=".\..\..\..\Construct Compile\Sprite Object\Release/Light.pdb"
+				ProgramDatabaseFile=".\..\..\..\Construct Compile\8DirMov\Release/MouseMov.pdb"
 				SubSystem="2"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
-				ImportLibrary=".\..\..\..\Construct Compile\Sprite Object\Release/Light.lib"
+				ImportLibrary=".\..\..\..\Construct Compile\8DirMov\Release/MouseMov.lib"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -99,7 +97,7 @@
 			<Tool
 				Name="VCBscMakeTool"
 				SuppressStartupBanner="true"
-				OutputFile=".\..\..\..\Construct Compile\Sprite Object\Release/ConstructSDK.bsc"
+				OutputFile=".\..\..\..\Construct Compile\8DirMov\Release/ConstructSDK.bsc"
 			/>
 			<Tool
 				Name="VCFxCopTool"
@@ -108,16 +106,19 @@
 				Name="VCAppVerifierTool"
 			/>
 			<Tool
+				Name="VCWebDeploymentTool"
+			/>
+			<Tool
 				Name="VCPostBuildEventTool"
 			/>
 		</Configuration>
 		<Configuration
 			Name="Runtime|Win32"
-			OutputDirectory=".\..\..\..\Construct Compile\Sprite Object\Runtime"
-			IntermediateDirectory=".\..\..\..\Construct Compile\Sprite Object\Runtime"
+			OutputDirectory=".\..\..\..\Construct Compile\MouseMov\Runtime"
+			IntermediateDirectory=".\..\..\..\Construct Compile\MouseMov\Runtime"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
-			UseOfMFC="1"
+			UseOfMFC="2"
 			ATLMinimizesCRunTimeLibraryUsage="false"
 			CharacterSet="2"
 			>
@@ -139,23 +140,23 @@
 				MkTypLibCompatible="true"
 				SuppressStartupBanner="true"
 				TargetEnvironment="1"
-				TypeLibraryName=".\..\..\..\Construct Compile\Sprite Object\Runtime/ConstructSDK.tlb"
+				TypeLibraryName=".\..\..\..\Construct Compile\MouseMov\Runtime/ConstructSDK.tlb"
 				HeaderFileName=""
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				Optimization="2"
+				Optimization="1"
 				InlineFunctionExpansion="1"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;RUN_ONLY"
 				StringPooling="true"
-				RuntimeLibrary="0"
+				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="2"
 				PrecompiledHeaderThrough="stdafx.h"
-				PrecompiledHeaderFile=".\..\..\..\Construct Compile\Sprite Object\Runtime/ConstructSDK.pch"
-				AssemblerListingLocation=".\..\..\..\Construct Compile\Sprite Object\Runtime/"
-				ObjectFile=".\..\..\..\Construct Compile\Sprite Object\Runtime/"
-				ProgramDataBaseFileName=".\..\..\..\Construct Compile\Sprite Object\Runtime/"
+				PrecompiledHeaderFile=".\..\..\..\Construct Compile\MouseMov\Runtime/ConstructSDK.pch"
+				AssemblerListingLocation=".\..\..\..\Construct Compile\MouseMov\Runtime/"
+				ObjectFile=".\..\..\..\Construct Compile\MouseMov\Runtime/"
+				ProgramDataBaseFileName=".\..\..\..\Construct Compile\MouseMov\Runtime/"
 				BrowseInformation="1"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
@@ -173,15 +174,13 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="..\..\IDE\Plugins\Runtime\Light.csx"
+				OutputFile="..\..\IDE\Plugins\Runtime\ShadowCaster.csx"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				ModuleDefinitionFile=".\ConstructSDKRun.def"
-				ProgramDatabaseFile=".\..\..\..\Construct Compile\Sprite Object\Runtime/Light.pdb"
+				ProgramDatabaseFile=".\..\..\..\Construct Compile\MouseMov\Runtime/MouseMov.pdb"
 				SubSystem="2"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
-				ImportLibrary=".\..\..\..\Construct Compile\Sprite Object\Runtime/Light.lib"
+				ImportLibrary=".\..\..\..\Construct Compile\MouseMov\Runtime/MouseMov.lib"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -195,7 +194,7 @@
 			<Tool
 				Name="VCBscMakeTool"
 				SuppressStartupBanner="true"
-				OutputFile=".\..\..\..\Construct Compile\Sprite Object\Runtime/ConstructSDK.bsc"
+				OutputFile=".\..\..\..\Construct Compile\MouseMov\Runtime/ConstructSDK.bsc"
 			/>
 			<Tool
 				Name="VCFxCopTool"
@@ -204,13 +203,16 @@
 				Name="VCAppVerifierTool"
 			/>
 			<Tool
+				Name="VCWebDeploymentTool"
+			/>
+			<Tool
 				Name="VCPostBuildEventTool"
 			/>
 		</Configuration>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory=".\..\..\..\Construct Compile\Sprite Object\Debug"
-			IntermediateDirectory=".\..\..\..\Construct Compile\Sprite Object\Debug"
+			OutputDirectory=".\..\..\..\Construct Compile\8DirMov\Debug"
+			IntermediateDirectory=".\..\..\..\Construct Compile\8DirMov\Debug"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
 			UseOfMFC="2"
@@ -235,7 +237,7 @@
 				MkTypLibCompatible="true"
 				SuppressStartupBanner="true"
 				TargetEnvironment="1"
-				TypeLibraryName=".\..\..\..\Construct Compile\Sprite Object\Debug/ConstructSDK.tlb"
+				TypeLibraryName=".\..\..\..\Construct Compile\8DirMov\Debug/ConstructSDK.tlb"
 				HeaderFileName=""
 			/>
 			<Tool
@@ -247,12 +249,12 @@
 				RuntimeLibrary="3"
 				UsePrecompiledHeader="2"
 				PrecompiledHeaderThrough="stdafx.h"
-				PrecompiledHeaderFile=".\..\..\..\Construct Compile\Sprite Object\Debug/ConstructSDK.pch"
-				AssemblerListingLocation=".\..\..\..\Construct Compile\Sprite Object\Debug/"
-				ObjectFile=".\..\..\..\Construct Compile\Sprite Object\Debug/"
-				ProgramDataBaseFileName=".\..\..\..\Construct Compile\Sprite Object\Debug/"
+				PrecompiledHeaderFile=".\..\..\..\Construct Compile\8DirMov\Debug/ConstructSDK.pch"
+				AssemblerListingLocation=".\..\..\..\Construct Compile\8DirMov\Debug/"
+				ObjectFile=".\..\..\..\Construct Compile\8DirMov\Debug/"
+				ProgramDataBaseFileName=".\..\..\..\Construct Compile\8DirMov\Debug/"
 				BrowseInformation="2"
-				BrowseInformationFile=".\..\..\..\Construct Compile\Sprite Object\Debug/"
+				BrowseInformationFile=".\..\..\..\Construct Compile\8DirMov\Debug/"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="4"
@@ -270,16 +272,14 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="..\..\IDE\Plugins\Light.csx"
+				OutputFile="..\..\IDE\Plugins\ShadowCaster.csx"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
 				ModuleDefinitionFile=".\ConstructSDK.def"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile=".\..\..\..\Construct Compile\Sprite Object\Debug/Canvas.pdb"
+				ProgramDatabaseFile=".\..\..\..\Construct Compile\8DirMov\Debug/MouseMov.pdb"
 				SubSystem="2"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
-				ImportLibrary=".\..\..\..\Construct Compile\Sprite Object\Debug/Canvas.lib"
+				ImportLibrary=".\..\..\..\Construct Compile\8DirMov\Debug/MouseMov.lib"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -294,7 +294,7 @@
 			<Tool
 				Name="VCBscMakeTool"
 				SuppressStartupBanner="true"
-				OutputFile=".\..\..\..\Construct Compile\Sprite Object\Debug/ConstructSDK.bsc"
+				OutputFile=".\..\..\..\Construct Compile\8DirMov\Debug/ConstructSDK.bsc"
 			/>
 			<Tool
 				Name="VCFxCopTool"
@@ -303,13 +303,16 @@
 				Name="VCAppVerifierTool"
 			/>
 			<Tool
+				Name="VCWebDeploymentTool"
+			/>
+			<Tool
 				Name="VCPostBuildEventTool"
 			/>
 		</Configuration>
 		<Configuration
 			Name="Debug Runtime|Win32"
-			OutputDirectory=".\..\..\..\Construct Compile\Sprite Object\Debug_Runtime"
-			IntermediateDirectory=".\..\..\..\Construct Compile\Sprite Object\Debug_Runtime"
+			OutputDirectory=".\..\..\..\Construct Compile\8DirMov\Debug Runtime"
+			IntermediateDirectory=".\..\..\..\Construct Compile\8DirMov\Debug Runtime"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
 			UseOfMFC="2"
@@ -334,7 +337,7 @@
 				MkTypLibCompatible="true"
 				SuppressStartupBanner="true"
 				TargetEnvironment="1"
-				TypeLibraryName=".\..\..\..\Construct Compile\Sprite Object\Debug_Runtime/ConstructSDK.tlb"
+				TypeLibraryName=".\..\..\..\Construct Compile\8DirMov\Debug Runtime/ConstructSDK.tlb"
 				HeaderFileName=""
 			/>
 			<Tool
@@ -343,15 +346,15 @@
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;RUN_ONLY"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
-				RuntimeLibrary="1"
+				RuntimeLibrary="3"
 				UsePrecompiledHeader="2"
 				PrecompiledHeaderThrough="stdafx.h"
-				PrecompiledHeaderFile="..\..\Construct Compile\Sprite Object\Debug runtime/ConstructSDK.pch"
-				AssemblerListingLocation=".\..\..\..\Construct Compile\Sprite Object\Debug_Runtime/"
-				ObjectFile=".\..\..\..\Construct Compile\Sprite Object\Debug_Runtime/"
-				ProgramDataBaseFileName=".\..\..\..\Construct Compile\Sprite Object\Debug_Runtime/"
+				PrecompiledHeaderFile=".\..\..\..\Construct Compile\8DirMov\Debug Runtime/ConstructSDK.pch"
+				AssemblerListingLocation=".\..\..\..\Construct Compile\8DirMov\Debug Runtime/"
+				ObjectFile=".\..\..\..\Construct Compile\8DirMov\Debug Runtime/"
+				ProgramDataBaseFileName=".\..\..\..\Construct Compile\8DirMov\Debug Runtime/"
 				BrowseInformation="2"
-				BrowseInformationFile=".\..\..\..\Construct Compile\Sprite Object\Debug_Runtime/"
+				BrowseInformationFile=".\..\..\..\Construct Compile\8DirMov\Debug Runtime/"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="4"
@@ -369,16 +372,14 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="..\..\IDE\Plugins\Runtime\Light.csx"
+				OutputFile="..\..\IDE\Plugins\Runtime\ShadowCaster.csx"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
 				ModuleDefinitionFile=".\ConstructSDKRun.def"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile=".\..\..\..\Construct Compile\Sprite Object\Debug_Runtime/Canvas.pdb"
+				ProgramDatabaseFile=".\..\..\..\Construct Compile\8DirMov\Debug Runtime/MouseMov.pdb"
 				SubSystem="2"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
-				ImportLibrary=".\..\..\..\Construct Compile\Sprite Object\Debug_Runtime/Canvas.lib"
+				ImportLibrary=".\..\..\..\Construct Compile\8DirMov\Debug Runtime/MouseMov.lib"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -393,13 +394,16 @@
 			<Tool
 				Name="VCBscMakeTool"
 				SuppressStartupBanner="true"
-				OutputFile=".\..\..\..\Construct Compile\Sprite Object\Debug_Runtime/ConstructSDK.bsc"
+				OutputFile=".\..\..\..\Construct Compile\8DirMov\Debug Runtime/ConstructSDK.bsc"
 			/>
 			<Tool
 				Name="VCFxCopTool"
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -437,7 +441,7 @@
 					>
 					<Tool
 						Name="VCCLCompilerTool"
-						PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_WINDLL;_MBCS;_USRDLL;$(NoInherit)"
+						PreprocessorDefinitions=""
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -445,7 +449,7 @@
 					>
 					<Tool
 						Name="VCCLCompilerTool"
-						PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_WINDLL;_MBCS;_USRDLL;RUN_ONLY;$(NoInherit)"
+						PreprocessorDefinitions=""
 					/>
 				</FileConfiguration>
 			</File>
@@ -493,7 +497,7 @@
 					>
 					<Tool
 						Name="VCResourceCompilerTool"
-						PreprocessorDefinitions="_DEBUG;$(NoInherit)"
+						PreprocessorDefinitions=""
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -501,7 +505,7 @@
 					>
 					<Tool
 						Name="VCResourceCompilerTool"
-						PreprocessorDefinitions="_DEBUG;$(NoInherit)"
+						PreprocessorDefinitions=""
 					/>
 				</FileConfiguration>
 			</File>
@@ -550,7 +554,7 @@
 					>
 					<Tool
 						Name="VCCLCompilerTool"
-						PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_WINDLL;_MBCS;_USRDLL;$(NoInherit)"
+						PreprocessorDefinitions=""
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -558,7 +562,7 @@
 					>
 					<Tool
 						Name="VCCLCompilerTool"
-						PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_WINDLL;_MBCS;_USRDLL;RUN_ONLY;$(NoInherit)"
+						PreprocessorDefinitions=""
 					/>
 				</FileConfiguration>
 			</File>
@@ -586,7 +590,7 @@
 					>
 					<Tool
 						Name="VCCLCompilerTool"
-						PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_WINDLL;_MBCS;_USRDLL;$(NoInherit)"
+						PreprocessorDefinitions=""
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -594,7 +598,7 @@
 					>
 					<Tool
 						Name="VCCLCompilerTool"
-						PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_WINDLL;_MBCS;_USRDLL;RUN_ONLY;$(NoInherit)"
+						PreprocessorDefinitions=""
 					/>
 				</FileConfiguration>
 			</File>
@@ -622,7 +626,7 @@
 					>
 					<Tool
 						Name="VCCLCompilerTool"
-						PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_WINDLL;_MBCS;_USRDLL;$(NoInherit)"
+						PreprocessorDefinitions=""
 					/>
 				</FileConfiguration>
 				<FileConfiguration
@@ -630,7 +634,7 @@
 					>
 					<Tool
 						Name="VCCLCompilerTool"
-						PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_WINDLL;_MBCS;_USRDLL;RUN_ONLY;$(NoInherit)"
+						PreprocessorDefinitions=""
 					/>
 				</FileConfiguration>
 			</File>
@@ -660,7 +664,7 @@
 					>
 					<Tool
 						Name="VCCLCompilerTool"
-						PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_WINDLL;_MBCS;_USRDLL;$(NoInherit)"
+						PreprocessorDefinitions=""
 						UsePrecompiledHeader="1"
 					/>
 				</FileConfiguration>
@@ -669,7 +673,7 @@
 					>
 					<Tool
 						Name="VCCLCompilerTool"
-						PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_WINDLL;_MBCS;_USRDLL;RUN_ONLY;$(NoInherit)"
+						PreprocessorDefinitions=""
 						UsePrecompiledHeader="1"
 					/>
 				</FileConfiguration>
@@ -679,10 +683,6 @@
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl"
 			>
-			<File
-				RelativePath="AggressiveOptimize.h"
-				>
-			</File>
 			<File
 				RelativePath="ConstructSDK.h"
 				>
@@ -733,7 +733,7 @@
 				>
 			</File>
 			<File
-				RelativePath="res\ICON.BMP"
+				RelativePath="ICON.BMP"
 				>
 				<FileConfiguration
 					Name="Runtime|Win32"
@@ -745,7 +745,7 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath="ICON.BMP"
+				RelativePath="res\ICON.BMP"
 				>
 				<FileConfiguration
 					Name="Runtime|Win32"
@@ -765,10 +765,6 @@
 				>
 			</File>
 		</Filter>
-		<File
-			RelativePath="res\circlegrad_195.png"
-			>
-		</File>
 	</Files>
 	<Globals>
 	</Globals>
