Bad compilation settings for shadow caster caused it to not work. All fixed now

--- a/Plugins/Light/ConstructSDK.vcproj
+++ b/Plugins/Light/ConstructSDK.vcproj
@@ -159,6 +159,7 @@
 				BrowseInformation="1"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
+				DebugInformationFormat="3"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -177,6 +178,7 @@
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				ModuleDefinitionFile=".\ConstructSDKRun.def"
+				GenerateDebugInformation="false"
 				ProgramDatabaseFile=".\..\..\..\Construct Compile\Sprite Object\Runtime/Light.pdb"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
