--- a/IDE/Construct.rc
+++ b/IDE/Construct.rc
@@ -236,7 +236,7 @@ IDD_ABOUTBOX DIALOGEX 0, 0, 242, 167
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "About"
-FONT 8, "Arial", 400, 0, 0x0
+FONT 8, "Segoe UI", 400, 0, 0x0
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,186,148,50,14
     CTEXT           "David Clark\nAshley Gullen\nRich Whilding",IDC_PEOPLE,7,46,228,38
@@ -251,7 +251,7 @@ IDD_SETTINGS_DLG DIALOGEX 0, 0, 377, 215
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Construct : Preferences"
-FONT 8, "Arial", 0, 0, 0x1
+FONT 8, "Segoe UI", 0, 0, 0x1
 BEGIN
     CONTROL         "Tree1",IDC_TREE_CTRL,"SysTreeView32",TVS_HASBUTTONS | TVS_HASLINES | TVS_LINESATROOT | TVS_DISABLEDRAGDROP | TVS_SHOWSELALWAYS | WS_BORDER | WS_TABSTOP,4,4,105,191
     CONTROL         "",IDC_PAGE_FRAME,"Static",SS_GRAYFRAME | SS_SUNKEN | NOT WS_VISIBLE,113,22,259,173
@@ -263,7 +263,7 @@ END
 
 IDD_BARDIALOG DIALOGEX 0, 0, 157, 121
 STYLE DS_SETFONT | WS_CHILD
-FONT 8, "Arial", 0, 0, 0x0
+FONT 8, "Segoe UI", 0, 0, 0x0
 BEGIN
     CONTROL         "",IDC_MAIN_MENUBAR,"ProfUIS-ControlBar",WS_DLGFRAME | 0x2034,0,0,157,16
 END
@@ -271,7 +271,7 @@ END
 IDD_FIRSTSTART DIALOGEX 0, 0, 365, 193
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW | WS_EX_APPWINDOW
-FONT 8, "Arial", 0, 0, 0x1
+FONT 8, "Segoe UI", 0, 0, 0x1
 BEGIN
     CONTROL         176,IDC_STATIC,"Static",SS_BITMAP | SS_SUNKEN,5,5,129,183
     LTEXT           "",IDC_INFOTEXT,138,6,220,50
@@ -801,7 +801,7 @@ END
 IDD_INSERTOBJECTS DIALOGEX 0, 0, 442, 272
 STYLE DS_SETFONT | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_TOOLWINDOW
-FONT 8, "Arial", 0, 0, 0x1
+FONT 8, "Segoe UI", 0, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "",IDOK,370,23,67,14
     PUSHBUTTON      "",IDCANCEL,370,5,67,14
@@ -817,7 +817,7 @@ END
 IDD_EVENTWIZARD DIALOGEX 0, 0, 439, 261
 STYLE DS_SETFONT | WS_POPUP | WS_CLIPSIBLINGS | WS_CLIPCHILDREN | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_TOOLWINDOW
-FONT 8, "Arial", 0, 0, 0x1
+FONT 8, "Segoe UI", 0, 0, 0x1
 BEGIN
     PUSHBUTTON      "Back",IDC_BACK,330,243,50,14,WS_DISABLED
     CONTROL         "List1",IDC_OBJECTLIST,"SysListView32",LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_AUTOARRANGE | WS_BORDER | WS_TABSTOP,6,32,427,201
@@ -829,7 +829,7 @@ END
 
 IDD_PROPERTY_PAGE_2 DIALOGEX 0, 0, 267, 184
 STYLE DS_SETFONT | WS_CHILD
-FONT 8, "Arial", 0, 0, 0x0
+FONT 8, "Segoe UI", 0, 0, 0x0
 BEGIN
     GROUPBOX        "Auto save options",IDC_STATIC,1,4,254,62
     CONTROL         "Enable Auto Save",IDC_AUTOSAVE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,8,19,148,10
@@ -895,7 +895,7 @@ IDD_MENUEDITOR DIALOGEX 0, 0, 360, 157
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CLIPSIBLINGS | WS_CLIPCHILDREN | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Construct : "
-FONT 8, "Arial", 0, 0, 0x1
+FONT 8, "Segoe UI", 0, 0, 0x1
 BEGIN
     LTEXT           "",IDC_STATIC,3,3,354,99,NOT WS_VISIBLE
     CONTROL         "",IDC_SEPARATOR,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,5,130,64,10
@@ -911,7 +911,7 @@ IDD_ERROR DIALOGEX 0, 0, 240, 99
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Construct :"
-FONT 8, "Arial", 0, 0, 0x1
+FONT 8, "Segoe UI", 0, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,5,81,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,59,81,50,14
@@ -920,7 +920,7 @@ END
 
 IDD_PARAMETERS DIALOGEX 0, 0, 240, 179
 STYLE DS_SETFONT | DS_3DLOOK | DS_CONTROL | WS_CHILD | WS_VISIBLE | WS_CLIPSIBLINGS | WS_CLIPCHILDREN
-FONT 8, "Arial", 0, 0, 0x1
+FONT 8, "Segoe UI", 0, 0, 0x1
 BEGIN
     LTEXT           "",IDC_ARGDESC,5,6,230,23,SS_SUNKEN
     CONTROL         "",IDC_STACKBORDER,"Static",SS_BLACKFRAME,6,34,229,137
@@ -929,7 +929,7 @@ END
 IDD_OBJECTINFO DIALOGEX 0, 0, 262, 219
 STYLE DS_SETFONT | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_TOOLWINDOW
-FONT 8, "Arial", 0, 0, 0x1
+FONT 8, "Segoe UI", 0, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "OK",IDCLOSE,201,201,55,14
     GROUPBOX        "",IDC_BOX2,5,87,250,110
@@ -944,7 +944,7 @@ IDD_ECOMMENT DIALOGEX 0, 0, 240, 169
 STYLE DS_SETFONT | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Construct : Add comment"
-FONT 8, "Arial", 0, 0, 0x1
+FONT 8, "Segoe UI", 0, 0, 0x1
 BEGIN
     PUSHBUTTON      "",IDC_CLOSE,186,151,50,14
     EDITTEXT        IDC_COMMENT,5,23,230,124,ES_MULTILINE | ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL
@@ -959,7 +959,7 @@ IDD_ARRAYPASTE DIALOGEX 0, 0, 292, 178
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Construct : Array Paste"
-FONT 8, "Arial", 0, 0, 0x1
+FONT 8, "Segoe UI", 0, 0, 0x1
 BEGIN
     LTEXT           "Move:",IDC_STATIC,12,105,25,8
     PUSHBUTTON      "OK",IDOK,182,160,50,14
@@ -1016,7 +1016,7 @@ END
 
 IDD_SET_LANGUAGES DIALOG  0, 0, 267, 184
 STYLE DS_SETFONT | WS_CHILD
-FONT 8, "Arial"
+FONT 8, "Segoe UI"
 BEGIN
     GROUPBOX        "Language options",IDC_STATIC,1,4,255,167
     LTEXT           "Current language:",IDC_STATIC,8,17,143,8
@@ -1027,7 +1027,7 @@ IDD_ONFUNCTION DIALOGEX 0, 0, 294, 269
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Construct : On Function"
-FONT 8, "Arial", 0, 0, 0x1
+FONT 8, "Segoe UI", 0, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,9,249,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,65,249,50,14
@@ -1049,7 +1049,7 @@ END
 
 IDD_FILTER DIALOGEX 0, 0, 186, 119
 STYLE DS_SETFONT | WS_POPUP
-FONT 8, "Arial", 0, 0, 0x0
+FONT 8, "Segoe UI", 0, 0, 0x0
 BEGIN
     EDITTEXT        IDC_SEARCH,6,5,173,14,ES_AUTOHSCROLL
     PUSHBUTTON      "",IDC_FILTER,126,100,54,14
@@ -1059,7 +1059,7 @@ END
 IDD_EDITIMAGE DIALOGEX 0, 0, 343, 201
 STYLE DS_SETFONT | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_TOOLWINDOW
-FONT 8, "Arial", 0, 0, 0x1
+FONT 8, "Segoe UI", 0, 0, 0x1
 BEGIN
     PUSHBUTTON      "Blurs",IDC_BLURS,12,48,50,14
     PUSHBUTTON      "Effects",IDC_EFFECTS,11,66,50,14
@@ -1088,7 +1088,7 @@ END
 IDD_NTEMPLATE DIALOGEX 0, 0, 422, 201
 STYLE DS_SETFONT | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_TOOLWINDOW
-FONT 8, "Arial", 0, 0, 0x1
+FONT 8, "Segoe UI", 0, 0, 0x1
 BEGIN
     GROUPBOX        "Select template",IDC_BBOX,6,5,409,174
     DEFPUSHBUTTON   "Create",IDC_CREATE,312,183,50,14
@@ -1103,7 +1103,7 @@ END
 IDD_USEDPLUGINS DIALOGEX 0, 0, 280, 109
 STYLE DS_SETFONT | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_TOOLWINDOW
-FONT 8, "Arial", 0, 0, 0x1
+FONT 8, "Segoe UI", 0, 0, 0x1
 BEGIN
     PUSHBUTTON      "Close",IDCLOSE,217,36,58,14
     LTEXT           "<Application name>",IDC_APPNAME,5,5,269,10,SS_SUNKEN
@@ -1115,7 +1115,7 @@ IDD_NEWMOVEMENT DIALOGEX 0, 0, 376, 234
 STYLE DS_SETFONT | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Construct :"
-FONT 8, "Arial", 0, 0, 0x1
+FONT 8, "Segoe UI", 0, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "",IDOK,300,24,67,14
     PUSHBUTTON      "",IDCANCEL,300,6,67,14
@@ -1147,7 +1147,7 @@ IDD_NEWHLSL DIALOGEX 0, 0, 273, 187
 STYLE DS_SETFONT | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Construct : New effect (HLSL)"
-FONT 8, "Arial", 0, 0, 0x1
+FONT 8, "Segoe UI", 0, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,218,7,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,218,24,50,14
@@ -1170,7 +1170,7 @@ IDD_ADDVARIABLE DIALOGEX 0, 0, 293, 57
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Construct : Add Private Variable"
-FONT 8, "Arial", 400, 0, 0x0
+FONT 8, "Segoe UI", 400, 0, 0x0
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,238,24,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,238,7,50,14
@@ -1214,7 +1214,7 @@ IDD_NEWFAMILY DIALOGEX 0, 0, 238, 105
 STYLE DS_SETFONT | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Construct : New family"
-FONT 8, "Arial", 0, 0, 0x1
+FONT 8, "Segoe UI", 0, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,182,7,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,182,24,50,14
@@ -1226,7 +1226,7 @@ IDD_EGROUP DIALOGEX 0, 0, 240, 87
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Construct: Modify event group"
-FONT 8, "Arial", 0, 0, 0x1
+FONT 8, "Segoe UI", 0, 0, 0x1
 BEGIN
     EDITTEXT        IDC_TITLE,56,7,178,12,ES_MULTILINE | ES_AUTOHSCROLL | NOT WS_BORDER,WS_EX_CLIENTEDGE
     RTEXT           "Title:",IDC_TITLELABEL,7,8,44,11
@@ -1309,7 +1309,7 @@ END
 IDD_EXPORTWIZARD DIALOGEX 0, 0, 288, 217
 STYLE DS_SETFONT | WS_POPUP | WS_CLIPSIBLINGS | WS_CLIPCHILDREN | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_TOOLWINDOW
-FONT 8, "Arial", 0, 0, 0x1
+FONT 8, "Segoe UI", 0, 0, 0x1
 BEGIN
     PUSHBUTTON      "Back",IDC_BACK,179,199,50,14,WS_DISABLED
     PUSHBUTTON      "Cancel",IDC_CANCEL,5,199,50,14
@@ -1330,7 +1330,7 @@ END
 
 IDD_SNIPPETS DIALOGEX 0, 0, 186, 119
 STYLE DS_SETFONT | WS_POPUP
-FONT 8, "Arial", 0, 0, 0x0
+FONT 8, "Segoe UI", 0, 0, 0x0
 BEGIN
     DEFPUSHBUTTON   "Insert",IDC_INSERT,126,100,54,14
     CONTROL         "",IDC_SNIPPETS,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,5,5,175,90
@@ -1356,7 +1356,7 @@ END
 
 IDD_POPUPROTATE DIALOGEX 0, 0, 111, 42
 STYLE DS_SETFONT | WS_POPUP
-FONT 8, "Arial", 0, 0, 0x0
+FONT 8, "Segoe UI", 0, 0, 0x0
 BEGIN
     PUSHBUTTON      "Rotate",IDC_ROTATE,51,22,54,14
     CONTROL         "",IDC_ANGLE,"ComboBoxEx32",CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP,7,5,97,107
@@ -1366,7 +1366,7 @@ IDD_FAMILYMANAGER DIALOGEX 0, 0, 452, 273
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Construct : Family Manager"
-FONT 8, "Arial", 400, 0, 0x0
+FONT 8, "Segoe UI", 400, 0, 0x0
 BEGIN
     DEFPUSHBUTTON   "Close",IDOK,395,254,50,14
     CONTROL         "",IDC_OBJECTS,"SysListView32",LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_AUTOARRANGE | WS_BORDER | WS_TABSTOP,106,31,331,78
@@ -1937,7 +1937,7 @@ IDD_BLANK DIALOGEX 0, 0, 398, 316
 STYLE DS_SETFONT | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Construct : Picture Editor"
-FONT 8, "Arial", 0, 0, 0x1
+FONT 8, "Segoe UI", 0, 0, 0x1
 BEGIN
     CONTROL         "",IDC_MAIN_MENUBAR,"ProfUIS-ControlBar",0x2034,7,7,187,17
     CONTROL         "",IDC_TOOLS,"ProfUIS-ControlBar",0x1434,7,29,188,16
@@ -1951,7 +1951,7 @@ IDD_PICED_RESIZE DIALOGEX 0, 0, 120, 58
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Construct : Grid settings"
-FONT 8, "Arial", 0, 0, 0x1
+FONT 8, "Segoe UI", 0, 0, 0x1
 BEGIN
     EDITTEXT        IDC_WIDTH,73,7,40,12,ES_AUTOHSCROLL
     EDITTEXT        IDC_HEIGHT,73,22,40,12,ES_AUTOHSCROLL
@@ -1976,7 +1976,7 @@ IDD_GRID DIALOGEX 0, 0, 143, 70
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Construct :"
-FONT 8, "Arial", 0, 0, 0x1
+FONT 8, "Segoe UI", 0, 0, 0x1
 BEGIN
     EDITTEXT        IDC_WIDTH,74,6,63,12,ES_AUTOHSCROLL
     DEFPUSHBUTTON   "OK",IDOK,16,52,59,14
