persist files can now be disabled via the preferences dialog.

--- a/IDE/Construct.rc
+++ b/IDE/Construct.rc
@@ -831,11 +831,11 @@ IDD_PROPERTY_PAGE_2 DIALOGEX 0, 0, 267, 184
 STYLE DS_SETFONT | WS_CHILD
 FONT 8, "Segoe UI", 0, 0, 0x0
 BEGIN
-    GROUPBOX        "Auto save options",IDC_STATIC,1,4,254,62
-    CONTROL         "Enable Auto Save",IDC_AUTOSAVE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,8,19,148,10
+    GROUPBOX        "Auto save options",IDC_STATIC,1,4,127,62
+    CONTROL         "Enable Auto Save",IDC_AUTOSAVE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,8,19,119,10
     LTEXT           "Save every..",IDC_STATIC,8,33,61,8,WS_DISABLED
     EDITTEXT        IDC_TIME,7,45,40,14,ES_AUTOHSCROLL
-    LTEXT           "minutes",IDC_STATIC,53,51,79,8
+    LTEXT           "minutes",IDC_STATIC,53,51,71,8
     GROUPBOX        "Auto backup options",IDC_STATIC,2,72,253,62
     CONTROL         "Auto backup saves",IDC_AUTOBACKUP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,87,148,10
     EDITTEXT        IDC_NUMBACKUPS,9,113,40,14,ES_AUTOHSCROLL
@@ -844,6 +844,8 @@ BEGIN
     GROUPBOX        "Theme",IDC_STATIC,2,138,253,30
     RTEXT           "Interface theme:",IDC_STATIC,11,152,72,8
     COMBOBOX        IDC_THEME,87,150,141,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    GROUPBOX        "Misc options",IDC_STATIC,131,4,123,62
+    CONTROL         "Enable Persists",IDC_AUTOSAVE3,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,136,18,109,10
 END
 
 IDD_COLORMIXER DIALOGEX 0, 0, 62, 179
