added angled box collision mode

--- a/Plugins/Panel/Template SDK_vc9.vcproj
+++ b/Plugins/Panel/Template SDK_vc9.vcproj
@@ -84,7 +84,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="..\..\IDE\Plugins\Template.csx"
+				OutputFile="..\..\IDE\Plugins\Panel.csx"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				IgnoreAllDefaultLibraries="false"
@@ -195,7 +195,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="..\..\IDE\Plugins\Runtime\Template.csx"
+				OutputFile="..\..\IDE\Plugins\Runtime\Panel.csx"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				IgnoreAllDefaultLibraries="false"
