--- a/Behaviors/drag and drop/DragDropMov.vcproj
+++ b/Behaviors/drag and drop/DragDropMov.vcproj
@@ -78,7 +78,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="..\..\IDE\Plugins\DragDropMov.csx"
+				OutputFile="..\..\IDE\Plugins\DragDrop.csx"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				IgnoreDefaultLibraryNames="atlmincrt.lib"
@@ -176,7 +176,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="..\..\IDE\Plugins\Runtime\DragDropMov.csx"
+				OutputFile="..\..\IDE\Plugins\Runtime\DragDrop.csx"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
 				IgnoreDefaultLibraryNames="atlmincrt.lib"
@@ -373,7 +373,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="..\..\..\..\Construct13\Plugins\Runtime\DragDrop.csx"
+				OutputFile="..\..\IDE\Plugins\Runtime\DragDrop.csx"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
 				IgnoreDefaultLibraryNames="atlmincrt.lib"
@@ -738,7 +738,7 @@
 				>
 			</File>
 			<File
-				RelativePath="ICON.BMP"
+				RelativePath="res\ICON.BMP"
 				>
 				<FileConfiguration
 					Name="Runtime|Win32"
@@ -750,7 +750,7 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath="res\ICON.BMP"
+				RelativePath="ICON.BMP"
 				>
 				<FileConfiguration
 					Name="Runtime|Win32"
