--- a/Behaviors/drag and drop/DragDropMov.vcproj
+++ b/Behaviors/drag and drop/DragDropMov.vcproj
@@ -2,8 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="DragDropMov"
-	ProjectGUID="{9799145E-25D5-4315-87F9-348E50D5751A}"
+	Name="Template SDK"
+	ProjectGUID="{E4FC0DEC-403B-44D0-8B45-6AC365B15CE2}"
+	RootNamespace="Sprite"
 	Keyword="MFCProj"
 	TargetFrameworkVersion="131072"
 	>
@@ -17,13 +18,13 @@
 	<Configurations>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory=".\..\..\..\Construct Compile\8DirMov\Release"
-			IntermediateDirectory=".\..\..\..\Construct Compile\8DirMov\Release"
+			OutputDirectory="Release"
+			IntermediateDirectory="Release"
 			ConfigurationType="2"
-			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
-			UseOfMFC="2"
+			UseOfMFC="0"
 			ATLMinimizesCRunTimeLibraryUsage="false"
 			CharacterSet="2"
+			WholeProgramOptimization="1"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -43,24 +44,29 @@
 				MkTypLibCompatible="true"
 				SuppressStartupBanner="true"
 				TargetEnvironment="1"
-				TypeLibraryName=".\..\..\..\Construct Compile\8DirMov\Release/ConstructSDK.tlb"
+				TypeLibraryName=".\..\..\..\Construct Compile\Sprite Object\Release/ConstructSDK.tlb"
 				HeaderFileName=""
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				Optimization="2"
-				InlineFunctionExpansion="1"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL"
+				Optimization="3"
+				InlineFunctionExpansion="2"
+				EnableIntrinsicFunctions="true"
+				FavorSizeOrSpeed="1"
+				OmitFramePointers="true"
+				EnableFiberSafeOptimizations="true"
+				WholeProgramOptimization="true"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;_CRT_SECURE_NO_DEPRECATE;_SECURE_SCL=0"
 				StringPooling="true"
-				RuntimeLibrary="2"
+				RuntimeLibrary="0"
 				BufferSecurityCheck="false"
 				EnableFunctionLevelLinking="false"
 				UsePrecompiledHeader="2"
 				PrecompiledHeaderThrough="stdafx.h"
-				PrecompiledHeaderFile=".\..\..\..\Construct Compile\8DirMov\Release/ConstructSDK.pch"
-				AssemblerListingLocation=".\..\..\..\Construct Compile\8DirMov\Release/"
-				ObjectFile=".\..\..\..\Construct Compile\8DirMov\Release/"
-				ProgramDataBaseFileName=".\..\..\..\Construct Compile\8DirMov\Release/"
+				PrecompiledHeaderFile="Release/ConstructSDK.pch"
+				AssemblerListingLocation="Release/"
+				ObjectFile="Release/"
+				ProgramDataBaseFileName="Release/"
 				BrowseInformation="1"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
@@ -81,13 +87,17 @@
 				OutputFile="..\..\IDE\Plugins\DragDrop.csx"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
+				IgnoreAllDefaultLibraries="false"
 				IgnoreDefaultLibraryNames="atlmincrt.lib"
 				ModuleDefinitionFile=".\ConstructSDK.def"
-				ProgramDatabaseFile=".\..\..\..\Construct Compile\8DirMov\Release/8DirMov.pdb"
+				ProgramDatabaseFile="Release/ConstructSDK.pdb"
 				SubSystem="2"
+				OptimizeReferences="2"
+				EnableCOMDATFolding="2"
+				OptimizeForWindows98="1"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
-				ImportLibrary=".\..\..\..\Construct Compile\8DirMov\Release/8DirMov.lib"
+				ImportLibrary="Release/ConstructSDK.lib"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -101,7 +111,7 @@
 			<Tool
 				Name="VCBscMakeTool"
 				SuppressStartupBanner="true"
-				OutputFile=".\..\..\..\Construct Compile\8DirMov\Release/ConstructSDK.bsc"
+				OutputFile=".\..\..\..\Construct Compile\Sprite Object\Release/ConstructSDK.bsc"
 			/>
 			<Tool
 				Name="VCFxCopTool"
@@ -115,13 +125,14 @@
 		</Configuration>
 		<Configuration
 			Name="Runtime|Win32"
-			OutputDirectory=".\..\..\..\Construct Compile\8DirMov\Runtime"
-			IntermediateDirectory=".\..\..\..\Construct Compile\8DirMov\Runtime"
+			OutputDirectory="Runtime"
+			IntermediateDirectory="Runtime"
 			ConfigurationType="2"
-			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
-			UseOfMFC="2"
+			UseOfMFC="0"
+			UseOfATL="1"
 			ATLMinimizesCRunTimeLibraryUsage="false"
 			CharacterSet="2"
+			WholeProgramOptimization="1"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -141,27 +152,35 @@
 				MkTypLibCompatible="true"
 				SuppressStartupBanner="true"
 				TargetEnvironment="1"
-				TypeLibraryName=".\..\..\..\Construct Compile\8DirMov\Runtime/ConstructSDK.tlb"
+				TypeLibraryName=".\..\..\..\Construct Compile\Sprite Object\Runtime/ConstructSDK.tlb"
 				HeaderFileName=""
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="1"
-				InlineFunctionExpansion="1"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;RUN_ONLY"
+				InlineFunctionExpansion="2"
+				EnableIntrinsicFunctions="true"
+				FavorSizeOrSpeed="2"
+				OmitFramePointers="true"
+				EnableFiberSafeOptimizations="false"
+				WholeProgramOptimization="true"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;RUN_ONLY;_CRT_SECURE_NO_DEPRECATE;_SECURE_SCL=0"
 				StringPooling="true"
-				RuntimeLibrary="2"
+				ExceptionHandling="1"
+				RuntimeLibrary="0"
 				BufferSecurityCheck="false"
 				EnableFunctionLevelLinking="false"
 				UsePrecompiledHeader="2"
 				PrecompiledHeaderThrough="stdafx.h"
-				PrecompiledHeaderFile=".\..\..\..\Construct Compile\8DirMov\Runtime/ConstructSDK.pch"
-				AssemblerListingLocation=".\..\..\..\Construct Compile\8DirMov\Runtime/"
-				ObjectFile=".\..\..\..\Construct Compile\8DirMov\Runtime/"
-				ProgramDataBaseFileName=".\..\..\..\Construct Compile\8DirMov\Runtime/"
+				PrecompiledHeaderFile="Runtime/ConstructSDK.pch"
+				AssemblerListingLocation="Runtime/"
+				ObjectFile="Runtime/"
+				ProgramDataBaseFileName="Runtime/"
 				BrowseInformation="1"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
+				DebugInformationFormat="0"
+				OmitDefaultLibName="false"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -176,16 +195,23 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				IgnoreImportLibrary="false"
+				LinkLibraryDependencies="true"
 				OutputFile="..\..\IDE\Plugins\Runtime\DragDrop.csx"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
+				IgnoreAllDefaultLibraries="false"
 				IgnoreDefaultLibraryNames="atlmincrt.lib"
 				ModuleDefinitionFile=".\ConstructSDKRun.def"
-				ProgramDatabaseFile=".\..\..\..\Construct Compile\8DirMov\Runtime/8DirMov.pdb"
+				GenerateDebugInformation="false"
+				ProgramDatabaseFile="Runtime/ConstructSDK.pdb"
 				SubSystem="2"
+				OptimizeReferences="2"
+				EnableCOMDATFolding="2"
+				OptimizeForWindows98="1"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
-				ImportLibrary=".\..\..\..\Construct Compile\8DirMov\Runtime/8DirMov.lib"
+				ImportLibrary="Runtime/ConstructSDK.lib"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -199,7 +225,7 @@
 			<Tool
 				Name="VCBscMakeTool"
 				SuppressStartupBanner="true"
-				OutputFile=".\..\..\..\Construct Compile\8DirMov\Runtime/ConstructSDK.bsc"
+				OutputFile=".\..\..\..\Construct Compile\Sprite Object\Runtime/ConstructSDK.bsc"
 			/>
 			<Tool
 				Name="VCFxCopTool"
@@ -213,11 +239,11 @@
 		</Configuration>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory=".\..\..\Construct Compile\8DirMov\Debug"
-			IntermediateDirectory=".\..\..\Construct Compile\8DirMov\Debug"
+			OutputDirectory="Debug"
+			IntermediateDirectory="Debug"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
-			UseOfMFC="2"
+			UseOfMFC="0"
 			ATLMinimizesCRunTimeLibraryUsage="false"
 			CharacterSet="2"
 			>
@@ -239,24 +265,24 @@
 				MkTypLibCompatible="true"
 				SuppressStartupBanner="true"
 				TargetEnvironment="1"
-				TypeLibraryName=".\..\..\Construct Compile\8DirMov\Debug/ConstructSDK.tlb"
+				TypeLibraryName=".\..\..\..\Construct Compile\Sprite Object\Debug/ConstructSDK.tlb"
 				HeaderFileName=""
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;_CRT_SECURE_NO_DEPRECATE;_SECURE_SCL=0"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
-				RuntimeLibrary="3"
+				RuntimeLibrary="1"
 				UsePrecompiledHeader="2"
 				PrecompiledHeaderThrough="stdafx.h"
-				PrecompiledHeaderFile=".\..\..\Construct Compile\8DirMov\Debug/ConstructSDK.pch"
-				AssemblerListingLocation=".\..\..\Construct Compile\8DirMov\Debug/"
-				ObjectFile=".\..\..\Construct Compile\8DirMov\Debug/"
-				ProgramDataBaseFileName=".\..\..\Construct Compile\8DirMov\Debug/"
-				BrowseInformation="2"
-				BrowseInformationFile=".\..\..\Construct Compile\8DirMov\Debug/"
+				PrecompiledHeaderFile="Debug/ConstructSDK.pch"
+				AssemblerListingLocation="Debug/"
+				ObjectFile="Debug/"
+				ProgramDataBaseFileName="Debug/"
+				BrowseInformation="1"
+				BrowseInformationFile="Debug/"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="4"
@@ -274,16 +300,16 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				OutputFile="..\IDE\Plugins\DragDrop.csx"
+				OutputFile="..\..\construct13\Plugins\ui.csx"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
 				ModuleDefinitionFile=".\ConstructSDK.def"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile=".\..\..\Construct Compile\8DirMov\Debug/8DirMov.pdb"
+				ProgramDatabaseFile="Debug/ConstructSDK.pdb"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
-				ImportLibrary=".\..\..\Construct Compile\8DirMov\Debug/8DirMov.lib"
+				ImportLibrary="Debug/ConstructSDK.lib"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -298,7 +324,7 @@
 			<Tool
 				Name="VCBscMakeTool"
 				SuppressStartupBanner="true"
-				OutputFile=".\..\..\Construct Compile\8DirMov\Debug/ConstructSDK.bsc"
+				OutputFile=".\..\..\..\Construct Compile\Sprite Object\Debug/ConstructSDK.bsc"
 			/>
 			<Tool
 				Name="VCFxCopTool"
@@ -312,11 +338,11 @@
 		</Configuration>
 		<Configuration
 			Name="Debug Runtime|Win32"
-			OutputDirectory=".\..\..\Construct Compile\8DirMov\Debug Runtime"
-			IntermediateDirectory=".\..\..\Construct Compile\8DirMov\Debug Runtime"
+			OutputDirectory="Debug_Runtime"
+			IntermediateDirectory="Debug_Runtime"
 			ConfigurationType="2"
 			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC60.vsprops"
-			UseOfMFC="2"
+			UseOfMFC="0"
 			ATLMinimizesCRunTimeLibraryUsage="false"
 			CharacterSet="2"
 			>
@@ -338,24 +364,24 @@
 				MkTypLibCompatible="true"
 				SuppressStartupBanner="true"
 				TargetEnvironment="1"
-				TypeLibraryName=".\..\..\Construct Compile\8DirMov\Debug Runtime/ConstructSDK.tlb"
+				TypeLibraryName=".\..\..\..\Construct Compile\Sprite Object\Debug_Runtime/ConstructSDK.tlb"
 				HeaderFileName=""
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;RUN_ONLY"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;RUN_ONLY;_CRT_SECURE_NO_DEPRECATE;_SECURE_SCL=0"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
-				RuntimeLibrary="3"
+				RuntimeLibrary="1"
 				UsePrecompiledHeader="2"
 				PrecompiledHeaderThrough="stdafx.h"
-				PrecompiledHeaderFile=".\..\..\Construct Compile\8DirMov\Debug Runtime/ConstructSDK.pch"
-				AssemblerListingLocation=".\..\..\Construct Compile\8DirMov\Debug Runtime/"
-				ObjectFile=".\..\..\Construct Compile\8DirMov\Debug Runtime/"
-				ProgramDataBaseFileName=".\..\..\Construct Compile\8DirMov\Debug Runtime/"
-				BrowseInformation="2"
-				BrowseInformationFile=".\..\..\Construct Compile\8DirMov\Debug Runtime/"
+				PrecompiledHeaderFile="Debug_runtime/ConstructSDK.pch"
+				AssemblerListingLocation="Debug_Runtime/"
+				ObjectFile="Debug_Runtime/"
+				ProgramDataBaseFileName="Debug_Runtime/"
+				BrowseInformation="1"
+				BrowseInformationFile="Debug_Runtime/"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
 				DebugInformationFormat="4"
@@ -376,14 +402,13 @@
 				OutputFile="..\..\IDE\Plugins\Runtime\DragDrop.csx"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
-				IgnoreDefaultLibraryNames="atlmincrt.lib"
 				ModuleDefinitionFile=".\ConstructSDKRun.def"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile=".\..\..\Construct Compile\8DirMov\Debug Runtime/8DirMov.pdb"
+				ProgramDatabaseFile="Debug_Runtime/ConstructSDK.pdb"
 				SubSystem="2"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
-				ImportLibrary=".\..\..\Construct Compile\8DirMov\Debug Runtime/8DirMov.lib"
+				ImportLibrary="Debug_Runtime/ConstructSDK.lib"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -398,7 +423,7 @@
 			<Tool
 				Name="VCBscMakeTool"
 				SuppressStartupBanner="true"
-				OutputFile=".\..\..\Construct Compile\8DirMov\Debug Runtime/ConstructSDK.bsc"
+				OutputFile=".\..\..\..\Construct Compile\Sprite Object\Debug_Runtime/ConstructSDK.bsc"
 			/>
 			<Tool
 				Name="VCFxCopTool"
@@ -738,7 +763,7 @@
 				>
 			</File>
 			<File
-				RelativePath="res\ICON.BMP"
+				RelativePath="ICON.BMP"
 				>
 				<FileConfiguration
 					Name="Runtime|Win32"
@@ -750,7 +775,7 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath="ICON.BMP"
+				RelativePath="res\ICON.BMP"
 				>
 				<FileConfiguration
 					Name="Runtime|Win32"
